<resources>
    <string name="app_name">Student Carpooling</string>
    <string name="Register">Register</string>
    <string name="Login">Login</string>
    <string name="Reset">Reset Password</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Description">Image of our App Logo</string>
    <string name="Name">Name</string>
    <string name="Username">Username</string>
    <string name="Surname">Surname</string>
    <string name="create_trip">Trip</string>
    <string name="profile">P</string>
    <string name="messages">M</string>
    <string name="my_trips">T</string>
    <string name="navigation_drawer_open">Open Navigation Side Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Side Drawer</string>
    <string name="Domain">Domain Name</string>
    <string name="Gender">Gender:</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="Age">Age</string>
    <string name="University">University</string>
    <string name="Retype">Retype Password</string>
    <string name="Driver">Driver</string>
    <string name="Rider">Rider</string>
    <string-array name="CollegeDomains">
        <item>mail.dcu.ie</item>
        <item>tcd.ie</item>
        <item>testing.ie</item>
    </string-array>
    <string name="title_activity_driver">Driver</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_user_profile">Profile</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_driver_main">Home</string>
    <string name="title_activity_user_message">Messaging</string>
    <string name="title_activity_driver_trips">My Trips</string>
    <string name="title_activity_driver_create">Create a Trip</string>

</resources>
