<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".Login"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:srcCompat="@drawable/logo"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/Description"/>

    <EditText
        android:id="@+id/EmailInput"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:autofillHints="email"
        tools:targetApi="o"/>

    <EditText
        android:id="@+id/PasswordInput"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:autofillHints="email"
        tools:targetApi="o"/>

    <Button
        android:id="@+id/Login"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/Login" />

    <Button
        android:id="@+id/Reset"
        android:background="@null"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textAllCaps="false"
        android:textColor="@android:color/holo_blue_light"
        android:text="Forgot Password?" />


</LinearLayout>